--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:paddingTop="50px">
 
     <data>
         <!-- Pokud budeš mít nějaké proměnné pro DataBinding, zde je definuješ. -->
@@ -13,7 +14,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="732dp"
+            android:layout_marginTop="25px" />
 
     </RelativeLayout>
 </layout>
