Přidaní History aktivity

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,6 +9,12 @@
         android:title="Favourites"
         app:showAsAction="never" />
 
+    <!-- Přidání položky pro Recent History -->
+    <item
+        android:id="@+id/action_history"
+        android:title="Recent History"
+        app:showAsAction="never" />
+
     <!-- Menu pro seřazení podle hodnocení -->
     <item
         android:id="@+id/action_sort_by_rating"
